# Whisper-Pro-ASR

./: .coveragerc  .dockerignore  .gitignore  .htmlvalidate.json  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  eslint.config.cjs  package-lock.json  package.json  playwright.config.cjs  pyproject.toml  vitest.config.cjs  whisper_pro_asr.py
.agent/: instructions.md
.agent/skills/: SKILLS_CATALOG.md  ci_quality_gates_skill.md  release_skill.md
.agent/workflows/: build.md  test.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CONCURRENCY.md  DOCKERHUB_DESCRIPTION.md  Instructions.md  SETUP.md  TUNING.md
docs/releases/: GITHUB_RELEASE_v1.0.1.md  GITHUB_RELEASE_v1.0.2.md  GITHUB_RELEASE_v1.0.3.md  GITHUB_RELEASE_v1.0.4.md  GITHUB_RELEASE_v1.0.5.md  GITHUB_RELEASE_v1.0.6.md  GITHUB_RELEASE_v1.1.0.md  GITHUB_RELEASE_v1.1.1.md  GITHUB_RELEASE_v1.1.2.md  GITHUB_RELEASE_v1.1.3.md  GITHUB_RELEASE_v1.1.4.md  GITHUB_RELEASE_v1.1.5.md  GITHUB_RELEASE_v1.1.6.md
modules/: config.py
modules/api/: routes_asr.py  routes_system.py
modules/core/: bootstrap.py  config.py  config_helpers.py  constants.py  engine_registry.py  logging_setup.py  process_exec.py  subtitles.py  utils.py  utils_helpers.py
modules/inference/: intel_engine.py  model_manager.py
modules/monitoring/: analytics_ui.py  dashboard_ui.py  history_helpers.py  history_manager.py  io_utils.py  metrics_discovery.py  telemetry.py  telemetry_manager.py  template_loader.py
scripts/: check_metrics.py  export_models.py  preload_model.py
scripts/ci/: build-and-test.ps1  build-and-test.sh  check-inline-ignores.py  dependencies.env
tests/: check_coverage.py  conftest.py  run_suite.sh
(+154 files in other folders)
